Update page title and icon

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "flutter_application_1",
+  "appTitle": "壽司郎計算機🧮",
   "@appTitle": {
     "description": "The title of the application"
   }
